<resources>
    <string name="app_name">CryptoTracker</string>
    <string name="retry">Retry</string>
    <string name="no_results">No Results</string>
    <string name="coin_logo_img_desc">Coin logo</string>
    <string name="change_in_24h_txt">Change in 24h</string>
    <string name="text_1h">%s 1h</string>
    <string name="text_7d">%s 7d</string>
    <string name="text_24h">%s 24h</string>
    <string name="text_30d">%s 30d</string>
    <string name="change_7d_txt">Change 7d</string>
    <string name="change_1h_txt">Change 1h</string>
    <string name="coin_price">%.3f$</string>
    <string name="usd_format">%s$</string>
    <string name="twitter">Twitter</string>
    <string name="coin_name_placeholder">Coin Name</string>
    <string name="sort">Sort</string>
    <string name="market_cap">Market Cap</string>
    <string name="day_30_volume">30 day volume</string>
    <string name="new_coins">New Coins</string>
    <string name="website">Website</string>
    <string name="symbol">Symbol</string>
    <string name="growth">Growth</string>
    <string name="metrics">Metrics</string>
    <string name="price">Price</string>
    <string name="max_supply">Max Supply</string>
    <string name="current_supply">Current Supply</string>
    <string name="webview_error">Error Loading The Webpage</string>
    <string name="volume_market_cap">Volume / Market Cap</string>
</resources>